Modificado menu navegacion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<nav class="navbar">
+    <ul class="nav">
+      <li class="nav-item"><a class="nav-link" routerlink="animes">Animes</a></li>
+      <li class="nav-item"><a class="nav-link" routerlink="mangas">Mangas</a></li>
+      <li class="nav-item"><a class="nav-link" routerlink="novelas">Novelas</a></li>
+      <li class="nav-item"><a class="nav-link" routerlink="usuarios">Usuarios</a></li>
+    </ul>
+  </nav>
 <router-outlet></router-outlet>
