--- a/src/app/usuarios-list/usuarios-list.component.html
+++ b/src/app/usuarios-list/usuarios-list.component.html
@@ -1,1 +1,26 @@
-<p>usuarios-list works!</p>
+<div class="container">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Contraseña</th>
+                <th scope="col">ID Biblioteca</th>
+                <th scope="col">Administrador</th>
+                <th scope="col">Fecha Creacion</th>
+                <th scope="col">Fecha Actualizacion</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let usuario of usuarios">
+                <td>{{usuarios.id}}</td>
+                <td>{{usuarios.nombre}}</td>
+                <td>{{usuarios.password}}</td>
+                <td>{{usuarios.Id_Bib}}</td>
+                <td>{{usuarios.Admin}}</td>
+                <td>{{usuarios.createdAt|date:'dd-MM-yyyy'}}</td>
+                <td>{{usuarios.updatedAt|date:'dd-MM-yyyy'}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
