creado detalle anime

--- a/src/app/animes-list/animes-list.component.html
+++ b/src/app/animes-list/animes-list.component.html
@@ -18,10 +18,13 @@
                 <td>{{anime.Nombre}}</td>
                 <td>{{anime.Ep}}</td>
                 <td>{{anime.Tipo}}</td>
+                <td>{{anime.Descrp}}</td>
                 <td>{{anime.createdAt|date:'dd-MM-yyyy'}}</td>
                 <td>{{anime.updatedAt|date:'dd-MM-yyyy'}}</td>
                 <td>{{anime.Id_Bib}}</td>
             </tr>
         </tbody>
     </table>
+
+    <a routerLink="_nuevo" class="btn btn-primary">Añadir anime</a>
 </div>
