creado detalle manga

--- a/src/app/manga-detail/manga-detail.component.html
+++ b/src/app/manga-detail/manga-detail.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <form [formGroup]="animeForm">
+    <form [formGroup]="mangaForm">
         <div class="form-group">
-            <label for="nombre">Nombre del Anime</label>
+            <label for="nombre">Nombre del Manga</label>
             <input type="text" id="nombre" class="form-control" name="nombre">
         </div>
         <div class="form-group">
-            <label for="ep">Episodios</label>
-            <input type="text" id="ep" class="form-control" name="ep">
+            <label for="vol">Volumenes</label>
+            <input type="text" id="ep" class="form-control" name="vol">
         </div>
         <div class="form-group">
             <label for="tipo">Tipo</label>
