creado detalle novela

--- a/src/app/anime-detail/anime-detail.component.html
+++ b/src/app/anime-detail/anime-detail.component.html
@@ -16,6 +16,6 @@
             <label for="descrp">Descripcion</label>
             <textarea name="descrp" id="descrp" class="form-control"></textarea>
         </div>
-        <button class="btn btn-primary">Crear proyecto</button>
+        <button class="btn btn-primary">Crear Anime</button>
     </form>
 </div>
