añadido formulario reactivo mangas

--- a/src/app/animes-list/animes-list.component.html
+++ b/src/app/animes-list/animes-list.component.html
@@ -15,7 +15,7 @@
         <tbody>
             <tr *ngFor="let anime of animes">
                 <td>{{anime.Id}}</td>
-                <td><a [routerLink]="anime.id">{{anime.Nombre}}</a></td>
+                <td><a [routerLink]="anime.Id">{{anime.Nombre}}</a></td>
                 <td>{{anime.Ep}}</td>
                 <td>{{anime.Tipo}}</td>
                 <td>{{anime.Descrp}}</td>
