--- a/src/app/anime-detail/anime-detail.component.html
+++ b/src/app/anime-detail/anime-detail.component.html
@@ -18,5 +18,6 @@
         </div>
         <button *ngIf="!id" class="btn btn-primary" (click)="crear()">Crear Anime</button>
         <button *ngIf="id" class="btn btn-primary" (click)="modificar()">Modificar Anime</button>
+        <button *ngIf="id" class="btn btn-outline-danger" (click)="eliminar()">Eliminar Anime</button>
     </form>
 </div>
