--- a/src/app/manga-detail/manga-detail.component.html
+++ b/src/app/manga-detail/manga-detail.component.html
@@ -18,5 +18,6 @@
         </div>
         <button *ngIf="!id" class="btn btn-primary" (click)="crear()">Crear Manga</button>
         <button *ngIf="id" class="btn btn-primary" (click)="modificar()">Modificar Manga</button>
+        <button *ngIf="id" class="btn btn-outline-danger" (click)="eliminar()">Eliminar Manga</button>
     </form>
 </div>
