--- a/src/app/usuario-detail/usuario-detail.component.html
+++ b/src/app/usuario-detail/usuario-detail.component.html
@@ -12,6 +12,10 @@
             <label for="nombre">Contraseña</label>
             <input type="password" id="password" class="form-control" name="password" formControlName="password">
         </div>
+        <div class="form-group">
+            <label for="nombre">Repetir contraseña</label>
+            <input type="password" id="repassword" class="form-control" name="repassword" formControlName="repassword">
+        </div>
         <button *ngIf="!id" class="btn btn-primary" (click)="crear()">Crear Usuario</button>
         <button *ngIf="id" class="btn btn-primary" (click)="modificar()">Modificar Usuario</button>
         <button *ngIf="id" class="btn btn-outline-danger" (click)="eliminar()">Eliminar Usuario</button>
