--- a/src/app/usuario-detail/usuario-detail.component.html
+++ b/src/app/usuario-detail/usuario-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form [formGroup]="rolForm">
+    <form [formGroup]="usuarioForm">
         <div class="form-group">
             <label for="nombre">Nombre del Usuario</label>
             <input type="text" id="nombre" class="form-control" name="nombre" formControlName="nombre">
